--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -33,6 +33,10 @@
   background-color: white;
   padding: 4rem;
 }
+.image {
+  height: 13rem;
+}
+
 .suggestionBox {
   padding: 1rem;
   display: flex;
